--- a/templates/report.html
+++ b/templates/report.html
@@ -2,7 +2,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="card">
-  <div class="card-content">
+  <div class="card-content report-content">
     <h2 class="title is-4">Monthly Report</h2>
     <form method="get" class="mb-4">
       <label class="label">Select Year:</label>
