Rename monthly report links

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -41,6 +41,6 @@
   </div>
 </div>
 <div class="has-text-right">
-  <a href="/monthly-report" class="button is-primary">📊 View Monthly Report</a>
+<a href="/monthly-report" class="button is-primary">📊 View Reports</a>
 </div>
 {% endblock %}
