--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,7 @@
       <a class="navbar-item" href="/">Dashboard</a>
       <a class="navbar-item" href="/upload">Upload Data</a>
       <a class="navbar-item" href="/sku-map">SKU Map</a>
-      <a class="navbar-item" href="/monthly-report">Monthly Report</a>
+      <a class="navbar-item" href="/monthly-report">Reports</a>
     </div>
   </div>
 </nav>
