Filter retired SKUs and update labels

--- a/templates/sku_map.html
+++ b/templates/sku_map.html
@@ -23,7 +23,7 @@
                 <label for="merge_{{ loop.index0 }}" class="mr-2">Merge</label>
                 <span class="target-wrap is-invisible">
                   <input id="target_{{ loop.index0 }}" class="switch is-rounded is-success target-check" type="checkbox" data-value="{{ entry.canonical }}">
-                  <label for="target_{{ loop.index0 }}">Target</label>
+                  <label for="target_{{ loop.index0 }}">Parent</label>
                 </span>
               </div>
               <div class="column">
